--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -16,7 +16,9 @@ body {
     color: white;
     padding: 15px 35px;
 }
-
+main section{
+    margin-top: 130px;
+}
 /* nav related styles */
 nav {
     display: flex;
@@ -109,4 +111,47 @@ nav a {
     color: #757575);
     text-align: center;
     font-size: 18px;
+}
+
+main{
+    max-width: 1140px;
+    margin: 0px auto;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+}
+/* skills related styles */
+#what-i-do-description{
+    padding: 30px 150px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+.skill-description{
+    color:#757575;
+}
+
+/* Resume Section Styles */
+
+.resume-column-title{
+    color: var #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+.resume-item-title{
+    color: var #474747;
+    font-size: 25px;
+    font-weight: 700;
 }
