social icons updated

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -280,3 +280,17 @@ textarea {
 .contact textarea {
   font-weight: bold;
 }
+
+/* animation for social icons */
+.beat {
+  animation: beat 1s infinite;
+}
+
+@keyframes beat {
+  0%, 100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+}
